# lbcd

./: .cvsignore  .gitignore  .rules  COPYRIGHT  LAYOUT  LICENSE  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  acconfig.h  aclocal.m4  autogen  config.h.in  configure  configure.ac  configure.in  copyright  get_user.c  internal.h  kernel.c  lbcd.8  lbcd.8.in  lbcd.c  lbcd.h  lbcd.pod  lbcd_3.4.0.orig.tar.xz.delta  lbcd_3.4.0.orig.tar.xz.id  lbcd_3.4.1.orig.tar.xz.delta  lbcd_3.4.1.orig.tar.xz.id  lbcd_3.4.2.orig.tar.xz.delta  lbcd_3.4.2.orig.tar.xz.id  lbcd_3.5.0.orig.tar.xz.delta  lbcd_3.5.0.orig.tar.xz.id  lbcd_3.5.1.orig.tar.xz.delta  lbcd_3.5.1.orig.tar.xz.id  lbcd_3.5.2.orig.tar.xz.delta  lbcd_3.5.2.orig.tar.xz.id  (+13 more)
arch/: aix.c  bsd.c  darwin.c  hpux10.c  hpux9.c  irix.c  irix6.c  linux.c  next.c  osf.c  solaris.c  sunos.c  ultrix.c
client/: lbcdclient  lbcdclient.1
debian/: NEWS  changelog  control  copyright  default  init  lintian-overrides  postinst  postrm  prerm  rules  upstart  watch
debian/patches/: 0001-Set-lbcd-service-user-and-group.patch  0001-Set-user-and-group-in-service-unit.patch  0002-Fix-systemd-unit-errors-service-type.patch  0002-Increase-buffer-for-network-timeout-tests.patch  0003-Add-explicit-Requires-from-lbcd.service-to-lbcd.sock.patch  0004-Loosen-user_mtime-sanity-check.patch  series
debian/source/: local-patch-header
debian/upstream/: signing-key.asc
docs/: docknot.yaml
lbcd/: get_user.c  internal.h  lbcd.c  lbcd.pod  load.c  server.c  tmp_full.c  weight.c
lbcd/arch/: aix.c  bsd.c  darwin.c  hpux10.c  hpux9.c  irix.c  linux.c  osf.c  solaris.c
m4/: systemd.m4
modules/: Makefile.in  check_reply.c  ftp.c  http.c  imap.c  ldap.c  modules.h  monlist.c  monlist.h  nntp.c  ntp.c  pop.c  smtp.c  tcp.c  tcp_socket.c  udp_socket.c
portable/: getaddrinfo.c  getnameinfo.c  sd-daemon.h  snprintf.c  system.h
server/: get_user.c  internal.h  lbcd.8.in  lbcd.c  lbcd.pod  load.c  protocol.h  server.c  tmp_full.c  weight.c
server/arch/: aix.c  bsd.c  darwin.c  hpux10.c  hpux9.c  irix.c  linux.c  osf.c  solaris.c
systemd/: lbcd.service.in  lbcd.socket
tests/: TESTS
tests/docs/: pod-spelling-t  pod-t
tests/portable/: getaddrinfo-t.c
tests/server/: basic-t.c  errors-t.c
tests/tap/: lbcd.c  lbcd.h
tests/util/: network-t.c
tools/: lbcdclient
util/: network.c  vector.c  vector.h
